Fixed cut off icons.

--- a/frontend/sass/common.blocks/_icon.scss
+++ b/frontend/sass/common.blocks/_icon.scss
@@ -4,8 +4,8 @@
   display: inline-block;
   position: relative;
   background-repeat: no-repeat;
-  height: 1em;
-  width: 1em;
+  height: 1rem;
+  width: 1rem;
 }
 
 .icon_type_warning {
